--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -41,7 +41,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html;
+            root   dist;
             index  index.html index.htm;
         }
 
