--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -41,17 +41,21 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   dist;
-            index  index.html index.htm;
+            root    dist;
+            index /index.html;
         }
 
-        #error_page  404              /404.html;
+        error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
         #
-        error_page   500 502 503 504  /50x.html;
+        error_page   500 502 503 504 404  /50x.html;
         location = /50x.html {
-            root   html;
+            root    html;
+        }
+
+        location = /index.html {
+            root    html;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
