--- a/package.json
+++ b/package.json
@@ -2,14 +2,7 @@
   "name": "osu",
   "version": "1.0.0",
   "description": "osu on web",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "main": "index.html",
+  "author": "djmill0326",
   "type": "module"
 }
